k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-gcp-app
  namespace: production
  labels:
    app: k8s-gcp-app
spec:
  # Only 1 replica since we have 1 node
  # Jenkins will increase this later if needed
  replicas: 1
  selector:
    matchLabels:
      app: k8s-gcp-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: k8s-gcp-app
    spec:
      containers:
        - name: k8s-gcp-app
          # Jenkins replaces IMAGE_TAG with build number automatically
          image: us-central1-docker.pkg.dev/k8s-gcp-project-498008/k8s-gcp-registry/k8s-gcp-app:IMAGE_TAG
          ports:
            - containerPort: 3000
              name: http

          # Reduced resources for e2-medium node
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"

          # Liveness probe — restarts pod if app is stuck
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3

          # Readiness probe — sends traffic only when app is ready
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
