k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-gcp-app-ingress
  namespace: production
spec:
  ingressClassName: "gce"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-gcp-app-service
                port:
                  number: 80
